--- a/Assignment project/Basic_html_1.html
+++ b/Assignment project/Basic_html_1.html
@@ -11,20 +11,23 @@
       <a href="Dog_Video.html">Dog Video</a>
     </nav>
 		<main><h1>About My House</h1></main>
-		<p>My house consists of 3 bedrooms, one bathroom, a carport, and 2 sheds.</p>
-		<p>I have a backyard with a deck and an entertainment area with a fire pit</p>
+		<p><font size="7">My house consists of 3 bedrooms, one bathroom, a carport, and 2 sheds.</font></p>
+		<p><font size="4">I have a backyard with a deck and an entertainment area with a fire pit</font></p>
 		<h3>The People</h3>
-		<p>Max, and Kevin are two people that live with me</p>
-		<p>I have 3 dogs named Lola, Duke, and Lucci</p>
+		<p><b>Max</b>, and <i>Kevin</i> are two people that live with me</p>
+		<p>I have 3 dogs named Lola, <u>Duke</u>, and Lucci</p>
 		<h6>My Gaming Setup</h6>
 		<p>My gaming setup is one of the most important things to me</p>
 		<blockquote>I want to make it better everyday by buying things to make it look nicer!</blockquote>
 		<p>I have a gaming PC, LED lights, big desk, toys and figures, and medals</p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/9fF3a5lI99o" title="YouTube video player" frameborder="0"
 		allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-		<p>THANKS FOR READING!</p>
+		<p><font color="red" face="calibri" size="6">THANKS FOR READING!</font></p>
 		<img src="imghouse.jpg">
+		<p><font color="#FF0000">Next is a picture of a dog that looks almost exactly like mine</font></p>
 		<a href="dog.jpg">my doggy!</a>
+		<br>
+		<img src="lol.aha" alt="image cannot be displayed"></img>
 	</body>
 	<footer>
 		<a href="https://tiktok.com/@lokiko21">Check out my TikTok</a>
