--- a/Basic_HTML_and_CSS/project/Basic_HTML_template.html
+++ b/Basic_HTML_and_CSS/project/Basic_HTML_template.html
@@ -3,11 +3,12 @@
     <head>
         <title>Basic HTML Template</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./css/basic_css_demo_1.css">
     </head>
     <body>
 
         <div>
-            <h1>Basic CSS Demo</h1>
+            <h1>Basic HTML Template</h1>
         </div>
 
         <div class="container">
