added descriptions to alt="" attributes on images.

--- a/Basic_HTML_and_CSS/project/index.html
+++ b/Basic_HTML_and_CSS/project/index.html
@@ -41,7 +41,7 @@
           <!--PHOTO CONTAINER 1-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_1.jpg" alt="">
+              <img src="./images/thumb/thumbnail_1.jpg" alt="space view of earth">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
@@ -53,7 +53,7 @@
           <!--PHOTO CONTAINER 2-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_2.jpg" alt="">
+              <img src="./images/thumb/thumbnail_2.jpg" alt="2 planets in a starry night sky">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
@@ -65,7 +65,7 @@
           <!--PHOTO CONTAINER 3-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_3.jpg" alt="">
+              <img src="./images/thumb/thumbnail_3.jpg" alt="astronaut looking out into space">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
@@ -77,7 +77,7 @@
           <!--PHOTO CONTAINER 4-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_4.jpg" alt="">
+              <img src="./images/thumb/thumbnail_4.jpg" alt="view of 2 planets">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
@@ -89,7 +89,7 @@
           <!--PHOTO CONTAINER 5-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_5.jpg" alt="">
+              <img src="./images/thumb/thumbnail_5.jpg" alt="night view of big planet">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
@@ -101,7 +101,7 @@
           <!--PHOTO CONTAINER 6-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_6.jpg" alt="">
+              <img src="./images/thumb/thumbnail_6.jpg" alt="planets in space">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
@@ -113,7 +113,7 @@
           <!--PHOTO CONTAINER 7-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_7.jpg" alt="">
+              <img src="./images/thumb/thumbnail_7.jpg" alt="planets in a purple background">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
@@ -125,7 +125,7 @@
           <!--PHOTO CONTAINER 8-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_8.jpg" alt="">
+              <img src="./images/thumb/thumbnail_8.jpg" alt="night sky view of 2 planets colliding">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
@@ -137,7 +137,7 @@
           <!--PHOTO CONTAINER 9-->
           <div class="photo-container">
             <div class="photo">
-              <img src="./images/thumb/thumbnail_9.jpg" alt="">
+              <img src="./images/thumb/thumbnail_9.jpg" alt="2 planets in space with stars in the background">
               <div class="photo-overlay">
                 <h3>Click to Enlarge</h3>
                 <p>We have several space launches daily, book your flight today!</p>
