Added CSS styles to one page website

--- a/Basic_HTML_and_CSS/One-Page Website/one-page-website.html
+++ b/Basic_HTML_and_CSS/One-Page Website/one-page-website.html
@@ -3,6 +3,7 @@
   <head>
     <title>DESQUE</title>
     <meta charset="utf-8">
+    <link href="./css/one_page_website.css" rel="stylesheet">
   </head>
 
   <!--Start of my content-->
@@ -43,7 +44,7 @@
       </div>
     </div>
 
-    <!--3 by 3 picture gallery-->
+    <!--picture gallery-->
     <section>
       <div id="gallery">
         <h3>Pictures from us and our customers!</h3>
@@ -53,7 +54,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_1.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -67,7 +68,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_2.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -81,7 +82,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_3.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -95,7 +96,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_4.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -109,7 +110,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_5.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -123,7 +124,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_6.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -137,7 +138,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_7.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -151,7 +152,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_8.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -165,7 +166,7 @@
           <div>
             <div>
               <img src="images/thumb/thumb_9.jpg" alt="">
-              <div>
+              <div class="photo">
                 <p>
                   We have a variety of different desks, find one that
                   is right for you!
@@ -193,13 +194,13 @@
             <p>
               Please provide us with your contact information, Thanks!
             </p>
-            <div>
+            <div class="form-container">
               <form action="" method="post">
-                <input class="contact" type="text">
-                <input class="contact" type="text">
-                <input class="contact" type="email">
-                <input class="contact" type="tel">
-                <input class="contact" type="text">
+                <input class="contact" type="text" placeholder="First Name">
+                <input class="contact" type="text" placeholder="last Name">
+                <input class="contact" type="email" placeholder="Email Address">
+                <input class="contact" type="tel" placeholder="Phone Number">
+                <input class="contact" type="text" placeholder="Description">
                 <div class="form-spacer">
                   <label class="terms">Terms and Conditions</label>
                 </div>
