--- a/Basic_HTML_and_CSS/Portfolio/index.html
+++ b/Basic_HTML_and_CSS/Portfolio/index.html
@@ -13,7 +13,7 @@
     <body class="background">
 
         <!--NAVIGATION BAR-->
-        <div class="Navbar">
+        <div class="navbar">
             <a class="active" href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#github">Github</a>
@@ -54,7 +54,7 @@
             
             <!--LEFT COLUMN-->
             <div class="column-1">
-                <img src="images/" alt="">
+                <img src="images/me.jpg" alt="picture of me - Marco">
             </div>
             <!--RIGHT COLUMN-->
             <div class="column-2">
@@ -80,7 +80,7 @@
                 <p>
                     You can view all my projects on my Github profile here:
                     <br>
-                    <p class="center"><a href="https://www.github.com/lokiko-21" target="_blank">Lokiko-21 GitHub</a></p>
+                    <p class="center"><a href="https://www.github.com/lokiko-21" target="_blank">Marco Breton's GitHub</a></p>
                 </p>
             </div>
             <!--RIGHT COLUMN-->
@@ -90,13 +90,13 @@
 
         </div>
 
-        <!--CONTACT-->
+        <!--CONTACT Section-->
 
         <div class="row" id="contact">
 
             <!--LEFT COLUMN-->
             <div class="column-1 column-tall">
-                <img src="images." alt="contact image">
+                <img src="images/contact.jpg" alt="contact image">
             </div>
             <!--RIGHT COLUMN (CONTACT FORM)-->
             <div class="column-2 column-tall">
@@ -117,7 +117,7 @@
         <!--FOOTER-->
         <footer>
             <p>
-                <p class="center">&copy Prosper Consulting Inc., <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
+                <p class="center">&copy2023 all rights reserved, <a href="https://www.github.com/lokiko-21/" target="_blank">Marco Breton</a></p>
                 <br>
             </p>
         </footer>
