--- a/Basic_HTML_and_CSS/bootstrap4_project/cinemas.html
+++ b/Basic_HTML_and_CSS/bootstrap4_project/cinemas.html
@@ -77,7 +77,6 @@
         </div>
 
         <!--SHOWTIMES-->
-
         <div class="container">
           <div class="row">
             <div class="col-sm">
@@ -140,18 +139,81 @@
             </div>
           </div>
         </div>
+        <!--END SHOWTIMES-->
+        
+        <!--JUMBOTRON HEADING-->
+        <div class="jumbotron jumbotron-fluid bg-info mt-5 text-center">
+          <div class="container">
+            <h1 class="display-4 hidden-sm-down" style="color: #fff; font-family: roboto; font-weight: 900; text-transform: uppercase;">
+            Movie Deals</h1>
+            <p class="lead">Check out our monthly deals...</p>
 
-        <!--/SHOWTIMES-->
+            <!--DEALS-->
+            <button type="button" data-toggle="modal" data-target="#register" class="btn btn-outline-primary">See our monthly movie deals!</button>
+            <!--END DEALS-->
 
-        <div id="deals" class="text-center">
-          <form>
-            <h1 class="text-primary my-5">Sign up for Movie Club Rewards!</h1>
-            <div class="form-group">
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+          </div>
         </div>
+        <!--END JUMBOTRON HEADING-->
+
+        <!--START FORM-->
+        <div class="row">
+          <div class="container text-center col-ad-6" id="deals">
+            <div class="container text-center">
+              <h1 class="display-5 my-4 col-lg-auto text-primary">Stay current on movies!</h1>
+              <div class="input-group xb-5 input-group-sm">
+                <input type="text" class="form-control" placeholder="Email">
+                <span class="input-group-btn">
+                  <button type="button" class="btn btn-outline-info btn-secondary popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Submit your email to receive great movie reward deals!">
+                    Sign up!
+                  </button>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--END FORM-->
+
+        <!--START MODAL-->
+        <div class="modal fade" id="register">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Register to receive movie deals...</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+
+                <form>
+                  <fieldset class="form-group">
+                    <label for="firstname">First Name: </label>
+                    <input type="text" class="form-control" id="firstname" placeholder="First Name...">
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <label for="lastname">Last Name: </label>
+                    <input type="text" class="form-control" id="lastname" placeholder="Last Name...">
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <label for="email">Email: </label>
+                    <input type="email" class="form-control" id="email" placeholder="Email...">
+                  </fieldset>
+                  <fieldset class="form-group">
+                    <label for="password">Password: </label>
+                    <input type="password" class="form-control" id="password" placeholder="Password...">
+                  </fieldset>
+                </form>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--END MODAL-->
 
         <div class="container my-5">
           <ul class="nav nav-inline">
@@ -178,4 +240,9 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
+  <script>
+    $('.popover-dismiss').popover({
+     trigger: 'focus'
+    })
+  </script>
 </html>
