added a circle/oval-shaped button using bootstrap

--- a/Basic_HTML_and_CSS/bootstrap4_project/cinemas.html
+++ b/Basic_HTML_and_CSS/bootstrap4_project/cinemas.html
@@ -149,7 +149,7 @@
             <p class="lead">Check out our monthly deals...</p>
 
             <!--DEALS-->
-            <button type="button" data-toggle="modal" data-target="#register" class="btn btn-outline-primary">See our monthly movie deals!</button>
+            <button type="button" data-toggle="modal" data-target="#register" class="btn btn-outline-primary rounded-circle">See our monthly movie deals!</button>
             <!--END DEALS-->
 
           </div>
