added popup form & improved required field alert

--- a/Basic_HTML_and_JavaScript_1/challenges/index.html
+++ b/Basic_HTML_and_JavaScript_1/challenges/index.html
@@ -19,16 +19,23 @@
         <p>Hello</p>
         <br>
 
-        <form name="myForm" onsubmit="return formValidation()">
-            
-            <label>
-                Phone Number
-                <input type="tel" name="number">
-            </label>
+        <button class="openButton" onclick="openForm()">Open My Form</button>
+        <div class="formPopup" id="my-form">
+            <form class="formContainer" name="myForm" onsubmit="formValidation()">
 
-            <button type="submit">Submit</button>
+                <h1>Login</h1>
 
-        </form>
+                <label for="email"><b>Email</b></label>
+                <input type="text" placeholder="Enter Email" name="email" required>
+
+                <label for="psw"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="psw" required>
+
+                <button type="submit" class="btn">Login</button>
+                <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+
+            </form>
+        </div>
 
     </body>
 
