--- a/Basic_HTML_and_JavaScript_1/challenges/index.html
+++ b/Basic_HTML_and_JavaScript_1/challenges/index.html
@@ -18,6 +18,8 @@
         <h3>My subheading</h3>
         <p>Hello</p>
         <br>
+        <h4>Hover over the image!</h4>
+        <img class="zoom" src="images/spider.jpg">
 
         <button class="openButton" onclick="openForm()">Open My Form</button>
         <div class="formPopup" id="my-form">
