made popup form sticky

--- a/Basic_HTML_and_JavaScript_1/challenges/challenge1/index.html
+++ b/Basic_HTML_and_JavaScript_1/challenges/challenge1/index.html
@@ -36,7 +36,7 @@
         </section>
 
         <section id="login-form">
-            <button class="openButton" onclick="openForm()">Open My Form</button>
+            <button class="openButton sticky" onclick="openForm()">Open My Form</button>
             <div class="formPopup" id="my-form">
                 <form class="formContainer" name="myForm" onsubmit="formValidation()">
 
