--- a/Basic_HTML_and_JavaScript_1/challenges/challenge1/index.html
+++ b/Basic_HTML_and_JavaScript_1/challenges/challenge1/index.html
@@ -28,6 +28,7 @@
             <h1>Welcome!</h1>
             <h3>This is where all if not most of my challnges will be done.</h3>
             <p><strong><u>ENJOY!</u></strong></p>
+            <hr> <!--HORIZONTAL RULE LINE-->
         </section>
         <br>
         <section id="images">
