--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -5,12 +5,18 @@
         <title>Herbal Harbor</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--INSERT CSS LINK HERE-->
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <header>
-            
+            <ul>
+                <li id="current"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
         </header>
     </body>
 
