--- a/Herbal Harbor/reviews.html
+++ b/Herbal Harbor/reviews.html
@@ -14,8 +14,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
-                <li id="current"><a href="contact.html">Contact Us</a></li>
+                <li id="current"><a href="reviews.html">Reviews</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </header>
     </body>
