--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -10,14 +10,26 @@
 
     <body>
         <header>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li id="current"><a href="products.html">Products</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
+            <div class="nav-container">
+                <h1>Products</h1>
+                <ul>
+                    <li id="current"><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="reviews.html">Reviews</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </div>
         </header>
+        <footer>
+            <div class="footer-container">
+                <ul>
+                    <li><a href="https://lokiko-21.github.io" target="_blank">Portfolio</a></li>
+                    <li><a href="https://linkedin.com/in/marcobreton" target="_blank">LinkedIn</li>
+                    <li><a href="https://github.com/lokiko-21" target="_blank">GitHub</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 
 </html>
