added sections to home page
Added 4 sections to home page including placeholders for content and a form for the newsletter sign-up section

--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -21,6 +21,34 @@
                 </ul>
             </div>
         </header>
+        <section class="home-img">
+            <img>
+        </section>
+        <section class="home-about">
+            <h2>Our Mission</h2>
+            <ul>
+                <li>Goal #1</li>
+                <li>Goal #2</li>
+                <li>Goal #3</li>
+            </ul>
+        </section>
+        <section class="home-featured">
+            <h2>What's Popular</h2>
+            <ul>
+                <li>Popular Drink #1</li>
+                <li>Popular Drink #2</li>
+                <li>Popular Drink #3</li>
+            </ul>
+        </section>
+        <section class="home-signup">
+            <h2>Get The Latest News & Offers</h2>
+            <form action="/subscribe" method="post">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br>
+                <label for="name">Email:</label>
+                <input type="email" id="email" name="email" required><br>
+            </form>
+        </section>
         <footer>
             <div class="footer-container">
                 <ul>
