added comments to home page
Added comments to home page and moved around some sections

--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -10,6 +10,7 @@
 
     <body>
         <header>
+            <!--NAVIGATION MENU-->
             <div class="nav-container">
                 <h1>Home</h1>
                 <ul>
@@ -21,10 +22,9 @@
                 </ul>
             </div>
         </header>
-        <section class="home-img">
-            <img>
-        </section>
+        <!--HOME/WELCOME-->
         <section class="home-about">
+            <img>  <!--INSERT HOME PAGE IMAGE HERE-->
             <h2>Our Mission</h2>
             <ul>
                 <li>Goal #1</li>
@@ -33,6 +33,7 @@
             </ul>
         </section>
         <section class="home-featured">
+            <!--FEATURED DRINKS-->
             <h2>What's Popular</h2>
             <ul>
                 <li>Popular Drink #1</li>
@@ -40,6 +41,7 @@
                 <li>Popular Drink #3</li>
             </ul>
         </section>
+        <!--NEWSLETTER SIGNUP-->
         <section class="home-signup">
             <h2>Get The Latest News & Offers</h2>
             <form action="/subscribe" method="post">
@@ -49,6 +51,7 @@
                 <input type="email" id="email" name="email" required><br>
             </form>
         </section>
+        <!--SOCIAL LINKS MENU-->
         <footer>
             <div class="footer-container">
                 <ul>
