added sections to about page
Added 3 different sections to about page already sorted out to help structure the page layout.

--- a/Herbal Harbor/about.html
+++ b/Herbal Harbor/about.html
@@ -21,6 +21,39 @@
                 </ul>
             </div>
         </header>
+        <section class="about-history">
+            <div class="row">
+                <div class="column">
+                    <img src="" alt="">
+                </div>
+                <div class="column">
+                    <h2>Our History</h2>
+                    <p>Start our story</p>
+                </div>
+            </div>
+        </section>
+        <section class="about-evolution">
+            <div class="row">
+                <div class="column">
+                    <h2>Our Evolution</h2>
+                    <p>Describe company success/adaptations</p>
+                </div>
+                <div class="column">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="about-future">
+            <div class="row">
+                <div class="column">
+                    <img src="" alt="">
+                </div>
+                <div class="column">
+                    <h2>Our Future</h2>
+                    <p>Share our vision/goals</p>
+                </div>
+            </div>
+        </section>
         <footer>
             <div class="footer-container">
                 <ul>
