added images to about
Added two images to the first two section of the about page

--- a/Herbal Harbor/about.html
+++ b/Herbal Harbor/about.html
@@ -24,7 +24,7 @@
         <section class="about-history">
             <div class="row">
                 <div class="column">
-                    <img src="" alt="">
+                    <img src="images/first_teas.png" alt="Picture Of First Tea's">
                 </div>
                 <div class="column">
                     <h2>Our History</h2>
@@ -39,7 +39,7 @@
                     <p>Describe company success/adaptations</p>
                 </div>
                 <div class="column">
-                    <img src="" alt="">
+                    <img src="images/variety_teas.jpg" alt="Picture Of New Tea's">
                 </div>
             </div>
         </section>
