Added sections to Products page
added sections for different categories of teas the company has, such as "popular", "seasonal", "herbal", and "milk" teas.

--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -21,6 +21,24 @@
                 </ul>
             </div>
         </header>
+        <section class="product-popular">
+            <!--POPULAR TEAS AS CARDS-->
+        </section>
+        <section class="product-seasonal">
+            <!---->
+            <h2>See All Seasonal Teas</h2>
+        </section>
+        <section class="product-herbal">
+            <!---->
+            <h2>See All Herbal Teas</h2>
+        </section>
+        <section class="product-milk">
+            <!---->
+            <h2>See All Milk Teas</h2>
+        </section>
+        <section class="product-contact">
+            <!---->
+        </section>
         <footer>
             <div class="footer-container">
                 <ul>
