updated content in Products page
Added cards with placeholder images, descriptions, and titles. ALSO* updated CSS for the first time to help with seeing content layout.

--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -21,21 +21,107 @@
                 </ul>
             </div>
         </header>
+
         <section class="product-popular">
-            <!--POPULAR TEAS AS CARDS-->
+            <h2>Popular Teas</h2>
+            <div class="tea-container">
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Chai Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Matcha Green Tea">
+                    <h3>Green Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Thai Iced Tea">
+                    <h3>Black Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+            </div>
+            <h2>See All Teas</h2>
         </section>
+
         <section class="product-seasonal">
-            <!---->
+            <h2>Seasoanl Teas</h2>
+            <div class="tea-container">
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Chai Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Matcha Green Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Thai Iced Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+            </div>
             <h2>See All Seasonal Teas</h2>
         </section>
+
         <section class="product-herbal">
-            <!---->
+            <h2>Herbal Teas</h2>
+            <div class="tea-container">
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Chai Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Matcha Green Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Thai Iced Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+            </div>
             <h2>See All Herbal Teas</h2>
         </section>
+
         <section class="product-milk">
-            <!---->
+            <h2>Milk Teas</h2>
+            <div class="tea-container">
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Chai Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Matcha Green Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+                <div class="tea-card">
+                    <img src="images/first_teas.png" alt="Thai Iced Tea">
+                    <h3>Chai Tea</h3>
+                    <p>Description of tea.</p>
+                    <button class="atc-button">Add To Cart</button>
+                </div>
+            </div>
             <h2>See All Milk Teas</h2>
         </section>
+
         <section class="product-contact">
             <!---->
         </section>
