updated products page
Added images and descriptions to each tea product the Products page

--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -26,21 +26,36 @@
             <h2>Popular Teas</h2>
             <div class="tea-container">
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Chai Tea">
+                    <img src="images/chai_tea.png" alt="Chai Tea">
                     <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <p>
+                        Our Chai Tea is a captivating blend of robust black tea and aromatic spices.
+                        Simmered to perfection, it's a comforting and invigorating treat with notes
+                        of cinnamon, ginger, cardamom, and cloves. Experience the essence of
+                        traditional Indian chai in every sip
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Matcha Green Tea">
+                    <img src="images/matcha_green_tea.png" alt="Matcha Green Tea">
                     <h3>Green Tea</h3>
-                    <p>Description of tea.</p>
+                    <p>
+                        Elevate your senses with our Matcha Green Tea. This vibrant powder is crafted
+                        from shade-grown tea leaves, ground to perfection. Its intense, earthy flavor
+                        is a testament to its rich heritage. Experience a harmonious balance of energy
+                        and tranquility with every sip.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Thai Iced Tea">
-                    <h3>Black Tea</h3>
-                    <p>Description of tea.</p>
+                    <img src="images/thai_tea.png" alt="Thai Iced Tea">
+                    <h3>Thai Iced Tea</h3>
+                    <p>
+                        Dive into a world of bold flavors with our Thai Iced Tea. This exotic blend
+                        of strong black tea, spices, and sweetened condensed milk creates a symphony
+                        of taste sensations. Served over ice, it's a refreshing and creamy delight,
+                        perfect for sipping on a sunny afternoon.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
@@ -51,21 +66,36 @@
             <h2>Seasoanl Teas</h2>
             <div class="tea-container">
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Chai Tea">
+                    <img src="images/chai_tea.png" alt="Chai Tea">
                     <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <p>
+                        Our Chai Tea is a captivating blend of robust black tea and aromatic spices.
+                        Simmered to perfection, it's a comforting and invigorating treat with notes
+                        of cinnamon, ginger, cardamom, and cloves. Experience the essence of
+                        traditional Indian chai in every sip.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Matcha Green Tea">
-                    <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <img src="images/orange_cider_tea.png" alt="Orange Cider Tea">
+                    <h3>Orange Cider</h3>
+                    <p>
+                        Experience the cozy warmth of our Orange Cider Tea. We've blended zesty oranges
+                        with fragrant spices and a touch of sweetness for a comforting brew that'll
+                        make you feel like you're wrapped in a blanket by the fireplace. Sip on this
+                        delightful concoction and let its soothing flavors embrace you.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Thai Iced Tea">
-                    <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <img src="images/ginger_tea.png" alt="Ginger Tea">
+                    <h3>Ginger Tea</h3>
+                    <p>
+                        Embrace the invigorating essence of our Ginger Tea. This brew is a spicy dance
+                        of robust ginger root, balanced with a hint of citrus and a touch of honey.
+                        It's a lively cup that awakens your senses and warms you from the inside out.
+                        Savor the lively kick and aromatic allure of this spirited blend.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
@@ -76,21 +106,39 @@
             <h2>Herbal Teas</h2>
             <div class="tea-container">
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Chai Tea">
-                    <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <img src="images/green_tea.png" alt="Green Tea">
+                    <h3>Green Tea</h3>
+                    <p>
+                        Our Green Tea is a delicate infusion of handpicked leaves, known for their fresh
+                        and grassy notes. Grown in the lush fields, it offers a soothing and
+                        revitalizing experience. Savor the pure, unadulterated essence of
+                        nature in every cup.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Matcha Green Tea">
-                    <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <img src="images/black_tea.png" alt="Black Tea">
+                    <h3>Black Tea</h3>
+                    <p>
+                        Experience the bold and rich flavor of our Black Tea. Hand-picked from select tea
+                        gardens, this classic blend offers a robust and full-bodied profile with a
+                        hint of malty sweetness. Whether enjoyed plain or with a splash of milk,
+                        it's a timeless brew that invigorates your senses and leaves you feeling
+                        refreshed and revitalized. Elevate your tea experience with our exquisite Black Tea.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Thai Iced Tea">
-                    <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <img src="images/white_tea.jpg" alt="Thai Iced Tea">
+                    <h3>White Tea</h3>
+                    <p>
+                        Indulge in the delicate and pure essence of our White Tea. Grown in high-altitude
+                        gardens, these tender leaves are handpicked and minimally processed to preserve
+                        their natural freshness. The result is a light and subtle brew with floral
+                        notes and a touch of sweetness. This gentle infusion offers a serene
+                        experience, making it the perfect choice for moments of tranquility and
+                        reflection. Embrace the grace of our White Tea and savor its ethereal taste.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
@@ -101,21 +149,37 @@
             <h2>Milk Teas</h2>
             <div class="tea-container">
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Chai Tea">
+                    <img src="images/chai_tea.png" alt="Chai Tea">
                     <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <p>
+                        Our Chai Tea is a captivating blend of robust black tea and aromatic spices.
+                        Simmered to perfection, it's a comforting and invigorating treat with
+                        notes of cinnamon, ginger, cardamom, and cloves. Experience the essence
+                        of traditional Indian chai in every sip.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Matcha Green Tea">
-                    <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <img src="images/taro_tea.png" alt="Taro Tea">
+                    <h3>Taro Tea</h3>
+                    <p>
+                        Indulge in a velvety concoction of taro and premium milk tea. Our Taro Milk
+                        Tea offers a delightful interplay of earthy and creamy notes, creating a
+                        truly unique and satisfying experience for your taste buds. Immerse
+                        yourself in this luxurious blend that promises both comfort and exotic
+                        charm in every sip.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
                 <div class="tea-card">
-                    <img src="images/first_teas.png" alt="Thai Iced Tea">
-                    <h3>Chai Tea</h3>
-                    <p>Description of tea.</p>
+                    <img src="images/thai_tea.png" alt="Thai Iced Tea">
+                    <h3>Thai Iced Tea</h3>
+                    <p>
+                        Dive into a world of bold flavors with our Thai Iced Tea. This exotic blend
+                        of strong black tea, spices, and sweetened condensed milk creates a
+                        symphony of taste sensations. Served over ice, it's a refreshing and
+                        creamy delight, perfect for sipping on a sunny afternoon.
+                    </p>
                     <button class="atc-button">Add To Cart</button>
                 </div>
             </div>
