updated all web pages
finished reviews and contact pages for now and updated the navbar for all pages as well by adding our company name

--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -12,7 +12,8 @@
         <header>
             <!--NAVIGATION MENU-->
             <div class="nav-container">
-                <h1>Home</h1>
+                <h1 class="company-name">Herbal Harbor</h1>
+                <p class="current-page">Home</p>
                 <ul>
                     <li id="current"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
@@ -25,20 +26,21 @@
         <!--HOME/WELCOME-->
         <section class="home-about">
             <img>  <!--INSERT HOME PAGE IMAGE HERE-->
-            <h2>Our Mission</h2>
-            <ul>
-                <li>Goal #1</li>
-                <li>Goal #2</li>
-                <li>Goal #3</li>
-            </ul>
+            <h2>What We Value</h2>
+            <h3>Quality Assurance</h3>
+            <p> </p>
+            <h3>Flavor Innovation</h3>
+            <p> </p>
+            <h3>Customer Experience</h3>
+            <p> </p>
         </section>
         <section class="home-featured">
             <!--FEATURED DRINKS-->
             <h2>What's Popular</h2>
             <ul>
-                <li>Popular Drink #1</li>
-                <li>Popular Drink #2</li>
-                <li>Popular Drink #3</li>
+                <li>Chai Tea with Milk</li>
+                <li>Matcha Green Tea</li>
+                <li>Thai Iced Tea</li>
             </ul>
         </section>
         <!--NEWSLETTER SIGNUP-->
