--- a/Herbal Harbor/reviews.html
+++ b/Herbal Harbor/reviews.html
@@ -11,7 +11,8 @@
     <body>
         <header>
             <div class="nav-container">
-                <h1>Reviews</h1>
+                <h1 class="company-name">Herbal Harbor</h1>
+                <p class="current-page">Reviews</p>
                 <ul>
                     <li id="current"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
@@ -21,6 +22,13 @@
                 </ul>
             </div>
         </header>
+        <section class="reviews">
+            <h2>Customer Reviews</h2>
+            <p>
+                Customer feedback is invaluable to us. It helps us understand what you love and how
+                we can improve. Share your thoughts on our teas and let us know how we're doing!
+            </p>
+        </section>
         <footer>
             <div class="footer-container">
                 <ul>
