--- a/Herbal Harbor/contact.html
+++ b/Herbal Harbor/contact.html
@@ -11,7 +11,8 @@
     <body>
         <header>
             <div class="nav-container">
-                <h1>Contact Us</h1>
+                <h1 class="company-name">Herbal Harbor</h1>
+                <p class="current-page">Contact</p>
                 <ul>
                     <li id="current"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
@@ -21,6 +22,21 @@
                 </ul>
             </div>
         </header>
+        <section class="contact">
+            <h2>Contact Us</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br><br>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required><br><br>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" rows="5" cols="40" required></textarea>
+
+                <input type="submit" value="Submit">
+            </form>
+        </section>
         <footer>
             <div class="footer-container">
                 <ul>
