--- a/Herbal Harbor/products.html
+++ b/Herbal Harbor/products.html
@@ -11,7 +11,8 @@
     <body>
         <header>
             <div class="nav-container">
-                <h1>Products</h1>
+                <h1 class="company-name">Herbal Harbor</h1>
+                <p class="current-page">Products</p>
                 <ul>
                     <li id="current"><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
