added footer styling
added styling to footer and also updated footer on all pages by adding more links and a copyright to my name.

--- a/Herbal Harbor/contact.html
+++ b/Herbal Harbor/contact.html
@@ -43,7 +43,14 @@
                     <li><a href="https://lokiko-21.github.io" target="_blank">Portfolio</a></li>
                     <li><a href="https://linkedin.com/in/marcobreton" target="_blank">LinkedIn</li>
                     <li><a href="https://github.com/lokiko-21" target="_blank">GitHub</a></li>
+                    <li><a href="terms.html"></a>Privacy Policy & Terms of Use</li>
+                    <li><a href="faq.html"></a>FAQ</li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#top">Back to Top</a></li>
                 </ul>
+            </div>
+            <div class="copyright">
+                &copy; 2023 marcobreton. All rights reserved.
             </div>
         </footer>
     </body>
