--- a/Herbal Harbor/index.html
+++ b/Herbal Harbor/index.html
@@ -26,13 +26,19 @@
         <!--HOME/WELCOME-->
         <section class="home-about">
             <img>  <!--INSERT HOME PAGE IMAGE HERE-->
-            <h2>What We Value</h2>
-            <h3>Quality Assurance</h3>
+            <h2>Our Values</h2>
+            <div class="home-card">
+                <h3>Quality Assurance</h3>
             <p> </p>
-            <h3>Flavor Innovation</h3>
+            </div>
+            <div class="home-card">
+                <h3>Customer Experience</h3>
             <p> </p>
-            <h3>Customer Experience</h3>
+            </div>
+            <div class="home-card">
+                <h3>Flavor Innovation</h3>
             <p> </p>
+            </div>
         </section>
         <section class="home-featured">
             <!--FEATURED DRINKS-->
@@ -60,7 +66,14 @@
                     <li><a href="https://lokiko-21.github.io" target="_blank">Portfolio</a></li>
                     <li><a href="https://linkedin.com/in/marcobreton" target="_blank">LinkedIn</li>
                     <li><a href="https://github.com/lokiko-21" target="_blank">GitHub</a></li>
+                    <li><a href="terms.html"></a>Privacy Policy & Terms of Use</li>
+                    <li><a href="faq.html"></a>FAQ</li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="#top">Back to Top</a></li>
                 </ul>
+            </div>
+            <div class="copyright">
+                &copy; 2023 marcobreton. All rights reserved.
             </div>
         </footer>
     </body>
